--- a/todo-api/public/stylesheets/style.css
+++ b/todo-api/public/stylesheets/style.css
@@ -122,4 +122,16 @@ table.scoring {
   table.scoring input {
     width: 50px; }
 
+/* BU and Channel */
+ul.bu-and-channel li {
+  width: 13.75%;
+  vertical-align: top;
+  border: 0; }
+  ul.bu-and-channel li div {
+    width: 100%;
+    text-align: center;
+    padding: 3px;
+    height: 40px;
+    margin-bottom: 2px; }
+
 /*# sourceMappingURL=style.css.map */
