--- a/todo-api/sass/style.scss
+++ b/todo-api/sass/style.scss
@@ -107,3 +107,20 @@ table.scoring {
   width: auto;
   input { width: 50px; }
 }
+
+/* BU and Channel */
+
+ul.bu-and-channel {
+  li {
+    width: 13.75%;
+    vertical-align: top;
+    border: 0;
+    div {
+      width: 100%;
+      text-align: center;
+      padding: 3px;
+      height: 40px;
+      margin-bottom: 2px;
+    }
+  }
+}
