get nav and periods from database and use resources to get data

--- a/todo-api/public/templates/prioritisationDetails.html
+++ b/todo-api/public/templates/prioritisationDetails.html
@@ -14,7 +14,9 @@
     <td>Theme</td>
     <td>
       <select ng-model="prioritisation.theme">
+        <option>Mobile</option>
         <option>Personalisation</option>
+        <option>Performance & Optimistaion</option>
       </select>
     </td>
   </tr>
@@ -24,6 +26,9 @@
   </tr>
   <tr>
     <td class="field">Business Sponsor</td><td><input ng-model="prioritisation['business-sponsor']"></td>
+  </tr>
+  <tr>
+    <td class="field">Team</td><td><input ng-model="prioritisation['team']"></td>
   </tr>
   <tr>
     <td>Status</td>
