--- a/todo-api/public/stylesheets/style.css
+++ b/todo-api/public/stylesheets/style.css
@@ -69,6 +69,15 @@ table {
   background-color: #ff8080;
   color: #fff; }
 
+.data-view {
+  text-align: right;
+  font-size: 80%;
+  padding: 2px 0; }
+
+.period {
+  text-align: right;
+  padding: 2px 0; }
+
 .nav {
   color: #fff;
   padding: 0;
@@ -124,7 +133,7 @@ table.scoring {
 
 /* BU and Channel */
 ul.bu-and-channel li {
-  width: 13.75%;
+  width: 14%;
   vertical-align: top;
   border: 0; }
   ul.bu-and-channel li div {
@@ -133,5 +142,7 @@ ul.bu-and-channel li {
     padding: 3px;
     height: 40px;
     margin-bottom: 2px; }
+    ul.bu-and-channel li div div {
+      height: 12px; }
 
 /*# sourceMappingURL=style.css.map */
