--- a/todo-api/sass/style.scss
+++ b/todo-api/sass/style.scss
@@ -51,6 +51,17 @@ table {
 .checkout-and-payments { background-color: $checkout-and-payments; color: #fff; }
 .mobile { background-color: $mobile; color: #fff; }
 
+.data-view {
+  text-align: right;
+  font-size: 80%;
+  padding: 2px 0;
+}
+
+.period {
+  text-align: right;
+  padding: 2px 0;
+}
+
 .nav {
   color: #fff;
   padding: 0;
@@ -112,7 +123,7 @@ table.scoring {
 
 ul.bu-and-channel {
   li {
-    width: 13.75%;
+    width: 14%;
     vertical-align: top;
     border: 0;
     div {
@@ -121,6 +132,9 @@ ul.bu-and-channel {
       padding: 3px;
       height: 40px;
       margin-bottom: 2px;
+      div {
+        height: 12px;
+      }
     }
   }
 }
