--- a/todo-api/sass/style.css
+++ b/todo-api/sass/style.css
@@ -14,6 +14,9 @@ a {
   a:hover {
     text-decoration: underline; }
 
+span {
+  display: inline; }
+
 h1 {
   text-align: center; }
 
@@ -111,6 +114,12 @@ table.prioritisations .id {
 .new-task {
   padding-top: 12px; }
 
+.no-of-items {
+  text-align: right;
+  padding: 6px 0 6px 6px;
+  font-style: italic;
+  font-size: 75%; }
+
 h2 input {
   width: 100%;
   font-weight: bold;
@@ -144,5 +153,15 @@ ul.bu-and-channel li {
     margin-bottom: 2px; }
     ul.bu-and-channel li div div {
       height: 12px; }
+
+/* Team Capacity */
+.team-capacity .team {
+  width: 130px; }
+.team-capacity .team-capacity-item {
+  padding: 4px;
+  margin: 2px;
+  text-align: center;
+  display: inline-block;
+  width: 200px; }
 
 /*# sourceMappingURL=style.css.map */
